    more detection routines to work.
  - qpiemu.dll: bit 1 of register CH now holds IF.
  - XMSRes.exe: option -H added.
  - SB16: 8-bit signed PCM mode (C6h 10h) supported.
  - HDA: reset controller if no codecs are attached.
  - cmdline option /CF added.
  - fixed: ES1371 audio driver.
  - /F cmdline option now accepts 11025 as argument.
  - added support for SiS 7012.

  v1.6, 10.6.2025
  - fixed: some port trap variables weren't initialized if real-mode port
    trapping was disabled.
  - fixed: debug displays may have caused a GPF.
  - VSBHDA16: option /DIVE added; enable Borland "Runtime error 200" fix.
  - fixed: VPIC EOI check now tests bits 5/6 of OCW2; handles specific EOIs.
  - fixed VMPU: set UART mode cmd 0x3F added.
  - fixed regression v1.4-v1.5: if DAC had no amplifier, volume was very low
    and couldn't be changed with /VOL.

  v1.5, 8.6.2024
  - MPU port emulation if BLASTER variable contains P=xxx.
  - cmdline option /P added.
  - cmdline option /SD added.
  - fix: volume for SB Live/Audigy wasn't set correctly.
  - trap PIC port to reject attempts to mask the real sound hw interrupt
    (Rational DOS extender).
  - switch to client context for SB interrupt emulation.
  - HDA: improved error msg if card init fails.
  - IRQ 2 accepted.
  - fix: SFX noise in tyrian2k, also may be in other games that use
    non-autoinit DSP cmds.

  v1.4, 20.4.2024
  - added 16-bit protected-mode variant vsbhda16.exe.
  - reworked HDA initialization code.
  - Creative's diagnose.exe accepts vsbhda's SB emulation.
  - fix: virtual DMA address may have been too high (crash in tyrian2k).
  - fix: writes to virtual DMA channel ports C0h-DFh caused writes to
    ports 10-1Fh.
  - handle "Runtime Error 200" issue in vsbhda16.
  - fix: DSP cmd 0x91 now handled correctly.
  - fix: virtual DMA register reads of 08/D0 (status) corrected.
  - removed stack checks for C++ sources.
  - fix: mixer volume setting for HDA devices.
  - cmdline option /BS added.